# myphotos

./: README.md  pyproject.toml
myphotos/: db.sqlite3
myphotos/myphotos/: asgi.py  settings.py  urls.py  wsgi.py
myphotos/photos/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
myphotos/photos/migrations/: 0001_initial.py  0002_uploadfile_alter_category_options_and_more.py  0003_myphotos_author.py
myphotos/photos/static/css/: admin.css
myphotos/photos/static/photos/css/: styles.css
myphotos/photos/templates/photos/: about.html  addpage.html  base.html  confidential.html  contact.html  index.html  list_categories.html  list_tags.html  login.html  post.html  register.html  terms.html
myphotos/photos/templates/photos/includes/: nav.html
myphotos/photos/templatetags/: photos_tags.py
myphotos/templates/: base.html
myphotos/templates/admin/: base_site.html
myphotos/users/: apps.py  authentication.py  context_processors.py  forms.py  urls.py  views.py
myphotos/users/templates/users/: password_reset_email.html  profile.html  register.html  register_done.html
